c2prj1_cards/grade.txt
Grading at Fri Jul 12 23:24:01 UTC 2019
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:28:12: error: empty character constant
   char x = '';
            ^
Could not compile your card.c!

Overall Grade: FAILED
